Commit CSS WPF
